--- a/docs/report/Makefile
+++ b/docs/report/Makefile
@@ -1,15 +1,15 @@
 # Makefile for building apresentacao1_principal.tex with references
 
 TEX=pdflatex
-#BIBTEX=bibtex
+BIBTEX=bibtex
 MAIN=report_main
-BUILDDIR=build
+BUILDDIR=.
 
 all: $(BUILDDIR)/$(MAIN).pdf
 
 $(BUILDDIR)/$(MAIN).pdf: $(MAIN).tex | $(BUILDDIR)
 	$(TEX) -output-directory=$(BUILDDIR) $(MAIN).tex
-	
+	$(BIBTEX) $(BUILDDIR)/$(MAIN)
 	$(TEX) -output-directory=$(BUILDDIR) $(MAIN).tex
 	$(TEX) -output-directory=$(BUILDDIR) $(MAIN).tex
 
